Clean up issues identified by static analyser